--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@600&display=swap");
 $color100: #fff4e9;
 $color100-8op: rgba(254, 149, 38, 8%);
 $color200: #ffdfbe;
@@ -25,7 +26,7 @@ $font-text: "Inter";
   font-weight: 600;
   font-size: 20px;
   color: $property;
-  margin: 0;
+  line-height: normal;
 }
 
 @mixin fontText($property) {
@@ -33,7 +34,7 @@ $font-text: "Inter";
   font-weight: 400;
   font-size: 20px;
   color: $property;
-  margin-top: 30px;
+  line-height: normal;
 }
 
 @mixin imgProps($url) {
